# callib

./: .gitignore  CMakeLists.txt  README.md
callib/include/: callib.h  callib_config.h
callib/src/: callib.cpp
doc/: README.md  SUMMARY.md  package-lock.json
doc/_book/: index.html  search_index.json
doc/_book/struct/: float3.html
doc/struct/: float3.md
docs/: index.html  nothing.html  package.json  search_index.json
docs/en/struct/: float3.html
example/graph/: AngleTest.cpp  LineTest.cpp  PointTest.cpp
honkit/: SUMMARY.md  book.json  package-lock.json
honkit/_book/: index.html  search_index.json
honkit/_book/en/struct/: float3.html
honkit/_book/struct/: float3.html
honkit/en/struct/: float3.md
include/: callib.h  callibcore.h
include/gate/: GateBased.h  LogicGate.h  callibGate.h
include/graph/: Angle.h  Arc.h  GraphDistance.h  GraphIntersection.h  GraphObject.h  Line.h  Point.h  Rect.h  callibGraph.h
include/misc/: Action.h  Event.h  TimeWatch.h
src/: callibcore.cpp  main.cpp  sub.cpp
src/callib/struct/: float3.cpp  float3.h
src/gate/: LogicGate.cpp
src/graph/: Angle.cpp  Arc.cpp  GraphDistance.cpp  GraphIntersection.cpp  GraphObject.cpp  Line.cpp  Point.cpp  Rect.cpp
src/misc/: TimeWatch.cpp
